      thanks to Enrico Zini for the report and Carl Chenet for the patch;
      Closes: #304006
  * bin/querybts, man/querybts.1, reportbug/ui/text_ui.py
    - querybts is now able to handle multiple bug numbers, package names or any
      mix of them when using --mbox option; thanks to Carl Chenet for the report
      and patch; Closes: #535560
  * bin/reportbug, reportbug/ui/text_ui.py
    - provide a default reply subject ('Re: ' + <original subject>) when
      providing additional information to a bug report; thanks to Carl Chenet
      for the report and patch; Closes: #537929

 -- Sandro Tosi <morph@debian.org>  Tue, 28 Jul 2009 11:39:11 +0200

reportbug (4.5) unstable; urgency=low

  [ Sandro Tosi ]
  * reportbug/__init__.py
    - bump reportbug version
  * reportbug/debianbts.py
    - force to enter the package name and short description while reporting a
      wnpp bug; thanks to Sam Morris for the report and to Carl Chenet for the
      idea about how to fix it; Closes: #456344
  * bin/reportbug
    - offer a default value (text) for UI at configuration time; thanks to Carl
      Chenet for the report and patch; Closes: #529981
    - make clear reportbug can work without smtphost, while proposing
      configuration; thanks to Andrei Popescu for the report and to Carl Chenet
      for the patch; Closes: #526630
    - in case of multiple packages selection, clarified that pressing ENTER only
      will exit reportbug; thanks to Carl Chenet for the report and patch;
      Closes: #532260
    - add possibility to specify a proxy server when '--configure'; thanks to
      Chris Chiappa for the report and to Carl Chenet for the patch;
      Closes: #247885
  * bin/reportbug, conf/reportbug.conf, debian/control, man/reportbug.*,
    po4a/po/*, reportbug/utils.py
    - removed support for 'af' mail user agent, since it's no more in Debian;
      thanks to Carl Chenet for the report and (partial) patch; Closes: #529987
  * reportbug/utils.py