@@ -36,6 +36,9 @@ You can specify
 .B help
 to get a list of supported servers.
 .TP
+.B \-b, \-\-buglist
+Display a bugs list for the given package
+.TP
 .B \-m, \-\-mbox
 Retrieve the given bug number(s) or package name(s) as a mailbox file, instead of viewing
 it. It will be dumped to standard output.
